# chess-analysis-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts  test_svg_implementation.sh
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: opening_theory.json
app/src/main/assets/piece_templates/: corrections_seed.json
app/src/main/assets/puzzles/: lichess_seed.csv
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  stockfish_jni.cpp
app/src/main/java/com/example/chessanalysis/: AiCoachManager.kt  ChessBoardView.kt  CoachManager.kt  EvalChartView.kt  GameEndReason.kt  GameHistoryManager.kt  GameReviewer.kt  LichessExplorer.kt  LiveAnalyzer.kt  LlamaRunner.kt  MainActivity.kt  MoveClass.kt  MoveEvalBar.kt  MoveListAdapter.kt  OnDeviceFineTuner.kt  OpeningBook.kt  OpeningBookManager.kt  PgnExporter.kt  PgnImporter.kt  PieceTemplateMatcher.kt  PuzzleManager.kt  ScreenshotImporter.kt  SoundTheme.kt  StockfishEngine.kt  TFLiteClassifier.kt  TacticalChance.kt  Themes.kt  TheoryRepository.kt
app/src/main/java/com/example/chessanalysis/ai/: AiCoachManager.kt  CoachManager.kt
app/src/main/java/com/example/chessanalysis/audio/: SoundManager.kt
app/src/main/java/com/example/chessanalysis/controller/: AiCoachController.kt  AnalysisReviewController.kt  CoachCommentController.kt  GameHistoryController.kt  GamePlayController.kt  ImportExportController.kt  PuzzleController.kt  SettingsDrawerController.kt  SetupModeController.kt  TheoryController.kt
app/src/main/java/com/example/chessanalysis/data/: GameHistoryManager.kt  LichessExplorer.kt  OpeningBookManager.kt  PgnExporter.kt  PgnImporter.kt  PuzzleManager.kt  SettingsRepository.kt  TheoryRepository.kt
app/src/main/java/com/example/chessanalysis/engine/: EngineHolder.kt  GameReviewer.kt  LiveAnalyzer.kt  LlamaRunner.kt  StockfishEngine.kt
app/src/main/java/com/example/chessanalysis/ml/: OnDeviceFineTuner.kt  PieceTemplateMatcher.kt  ScreenshotImporter.kt  TFLiteClassifier.kt
app/src/main/java/com/example/chessanalysis/model/: GameEndReason.kt  MoveClass.kt  OpeningBook.kt  SoundTheme.kt  TacticalChance.kt  Themes.kt
app/src/main/java/com/example/chessanalysis/state/: GameViewModel.kt
app/src/main/java/com/example/chessanalysis/ui/: ChessBoardView.kt  EvalChartView.kt  MoveEvalBar.kt  MoveListAdapter.kt  ViewFactory.kt
app/src/main/res/drawable/: bg_review_analyze.xml  ic_puzzle.xml  ic_settings.xml  seekbar_thumb.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
tools/: generate_sounds.py  generate_synthetic_data.py  process_refs.py  requirements.txt  train_chess_cnn.py
